Many visual fixes
Border title project changed to BCJB to avoid laping with categories switch.
Categories switch changed to the right to avoid overlaping.
Contact page forms fixed, they were appearing at the same time both the mobile and desktop version, fixed top and bottom margins and also fixed font size to viewport sized.
'Solicitar cotización' buttons were disappearing on the home screen, fixed.
Project slider content weight font now match the title weight.
Whatsapp icon text was misaligned vertically, fixed.

--- a/app/styles/contact.css
+++ b/app/styles/contact.css
@@ -257,3 +257,16 @@
   -o-animation:      upDown .4s forwards .7s;
   animation:         upDown .4s forwards .7s;*/
 }
+
+@media screen and (max-width: 600px) {
+  .contact-table .contact-table-cell h2{
+    font-size: 5vw;
+  }
+  
+  .contact-table .contact-table-cell strong{
+    font-size: 4vw;
+  }
+  .contact-table .contact-table-cell p{
+    font-size: 6.5vw;
+  }
+}
