--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -14,6 +14,7 @@ body{font-family: 'Roboto',sans-serif;}
 a{text-decoration:none;}
 strong{font-weight: 700}
 a,p,h1,h2,h3,h4,a[href],input,textarea,span{font-family: 'Roboto', sans-serif}
+p{font-weight: 100;}
 .clear{clear: both}
 .nopadding{padding: 0!important}
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
@@ -148,12 +149,10 @@ a,p,h1,h2,h3,h4,a[href],input,textarea,span{font-family: 'Roboto', sans-serif}
 }
 .no-margin{margin: 0}
 
-.landing-wrapper,
-.our-services-landing,
 .mentions-landing,
 .clients-landing,
 .contact-us{
-  min-height: 800px!important;
+  min-height: 680px!important;
 }
 .center-content{
   text-align: center
@@ -280,15 +279,36 @@ a,p,h1,h2,h3,h4,a[href],input,textarea,span{font-family: 'Roboto', sans-serif}
   font-size: 1rem!important;
 }
 
-.action-btn-cot-hero{
-  z-index: 99;
-  position: absolute;
-  bottom: 35%;
+.action-btn-hero{
+  border: 0;
+  color: white;
+  font-size: 16px;
+  padding: 10px;
+  text-align: center;
+  font-weight: 500;
+  filter: drop-shadow(0px 0px 10px rgba(0, 0, 0, 0.555));
   -webkit-transition: all .4s;
   -moz-transition: all .4s;
   -o-transition: all .4s;
   -ms-transition: all .4s;
   transition: all .4s;
+}
+
+.action-btn-hero-wrap {
+  margin: 30px 0;
+  z-index: 99;
+  -webkit-transition: all .4s;
+  -moz-transition: all .4s;
+  -o-transition: all .4s;
+  -ms-transition: all .4s;
+  transition: all .4s;
+}
+
+.action-btn-hero:hover {
+  background:  #00CBD6;
+  color: #fafafa;
+  border-radius: 8px;
+  filter: drop-shadow(0px 0px 150px black);
 }
 
 .action-btn-cot-hero a{
@@ -603,7 +623,7 @@ md-backdrop{background: rgba(0,0,0,0.5)}
 
 .toolbar-head.transparent-head{
   background: transparent;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
 }
@@ -685,6 +705,7 @@ md-backdrop{background: rgba(0,0,0,0.5)}
 }
 
 .toolbar-head .logo img{
+  flex: 0 1 auto;
   max-width: 100%;
   position: relative;
   top: -1px;
@@ -1075,6 +1096,10 @@ md-backdrop{background: rgba(0,0,0,0.5)}
 .spacees-landing .container-sm{
   margin: 0;
   margin-left: 12%;
+}
+
+.spacees-landing-content {
+  margin-top: 2rem;
 }
 
 .spacees-landing-content p {
@@ -2839,6 +2864,11 @@ input:-webkit-autofill {
 /*--------------/
   #CONTACT MAIN
 /*-------------*/
+.contact-container {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
 .contact-container .contact-form-message-error{
   color: #00C4D5;
   font-size: 12px;
@@ -3230,6 +3260,25 @@ input:-webkit-autofill {
   .toolbar-head .logo img{
     max-width: 140px;
     margin-left: 20px;
+    flex: 0 1 auto;
+  }
+
+  .our-services-landing{
+    height: auto!important;
+  }
+
+  .action-btn-cot{
+    margin-top: 1rem;
+    margin-bottom: 46px;
+  }
+
+  .clients-landing{
+    height: auto;
+  }
+
+  .logo {
+    flex: 0 1 auto!important;
+    max-width: 100%!important;
   }
 
   /*-----------/
@@ -3264,7 +3313,6 @@ input:-webkit-autofill {
 
   .landing-wrapper,
   .news-wrapper-landing,
-  .our-services-landing,
   .mentions-landing,
   .clients-landing,
   .contact-us{
@@ -3332,7 +3380,7 @@ input:-webkit-autofill {
   }
   .clients-slider-reel{min-height: 260px;}
   .clients-slider .client-item p{font-size: 16px;}
-  .services-content{padding-top: 30px;}
+  .services-content{margin-top: 40px}
   .services-items{margin-top: 0;}
   .services-items .services-item{
     border: none;
@@ -3512,12 +3560,12 @@ input:-webkit-autofill {
 }
 
 .whatsapp-float span {
-  color: black;
+  color: #fafafa;
   font-weight: 600;
   font-size: 17px;
   text-align:center;
   position:absolute;
-  top: 37px;
+  top: 36%;
   left: 18px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   transition: color 200ms ease-out;
@@ -3527,9 +3575,14 @@ input:-webkit-autofill {
   transition: fill 200ms ease-out;
   transition: stroke 200ms ease-out;
   transition: filter 200ms ease-out;
-  fill: #FAFAFA;
+  fill: #00C5D8;
   filter: drop-shadow(0px 0px 8px #00000063);
 }  
+
+.whatsapp-float svg{
+  width: 270px;
+  height: 100px;
+}
 
 .whatsapp-float:hover {
   transform: scale(1.05);
@@ -3545,4 +3598,22 @@ input:-webkit-autofill {
 }
 .weight-100{
   font-weight: 100;
+}
+
+@media screen and (max-width: 600px){
+  .whatsapp-float svg{
+    width: 260px;
+    height: 90px;
+  }
+
+  .whatsapp-float span {
+    left: 25px;
+    font-size: 16px;
+    top: 37%;
+  }
+
+  .whatsapp-float {
+    bottom: 0;
+    right: 0;
+  }
 }
